--- a/kontaktyy.html
+++ b/kontaktyy.html
@@ -13,7 +13,7 @@
         <p>Adres zamieszkania: Gównolandia 6</p>
         
     </ol>
-    <form action="mailto:frajerjea@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:Makstodzban@gmail.com" method="post" enctype="text/plain">
         <label >Twoje imie: </label>
         <input type="text" name="Imie:">
         <label >Email</label>
